# usgs_mrms_tethys_app

./: README.md
tethysapp-usgs_mrms/: .gitignore  install.yml  pyproject.toml
tethysapp-usgs_mrms/tethysapp/usgs_mrms/: app.py  mrms_tiles.py  s3_utils.py
tethysapp-usgs_mrms/tethysapp/usgs_mrms/controllers/: home.py  leaflet_mrms.py  mrms_max_pixel.py  mrms_recurrence_tile_png.py  mrms_recurrence_value_at.py  mrms_tile_png.py  mrms_value_at.py
tethysapp-usgs_mrms/tethysapp/usgs_mrms/ews_alerts/: ews.py
tethysapp-usgs_mrms/tethysapp/usgs_mrms/public/css/: downloading.css
tethysapp-usgs_mrms/tethysapp/usgs_mrms/public/js/: basin_map.js  downloading.js
tethysapp-usgs_mrms/tethysapp/usgs_mrms/state_map_extents/: generate_extents_file.py  state_extents.json
tethysapp-usgs_mrms/tethysapp/usgs_mrms/templates/usgs_mrms/: base.html  downloading.html  home.html  leaflet_mrms.html  state_basin.html  zarr_viewer.html
tethysapp-usgs_mrms/tethysapp/usgs_mrms/tests/: tests.py
tethysapp-usgs_mrms/tethysapp/usgs_mrms/workspaces/app_workspace/unifed/mrms_single_basin_stable.zarr/lon/: .zarray  0
tethysapp-usgs_mrms/tethysapp/usgs_mrms/workspaces/app_workspace/unifed/mrms_single_basin_stable.zarr/rain/: .zarray  .zattrs  0.0  10.0  6.0  7.0  9.0
tethysapp-usgs_mrms/tethysapp/usgs_mrms/workspaces/app_workspace/unifed/mrms_single_basin_stable.zarr/row/: .zattrs
tethysapp-usgs_mrms/tethysapp/usgs_mrms/workspaces/app_workspace/unifed/mrms_single_basin_stable.zarr/time/: .zarray
tethysapp/gizmo_showcase/: app.py  mrms_tiles.py
(+26 files in other folders)
